plugins {
    id 'java'
}


sourceCompatibility = 1.8

repositories {
    mavenCentral()
}


dependencies {
    compile	"commons-cli:commons-cli:1.3.1"
    compile	"org.apache.commons:commons-csv:1.5"
    compile "org.slf4j:slf4j-api:1.7.14"
    compile "org.slf4j:slf4j-simple:1.7.14"
    compile 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'
    compile 'org.reflections:reflections:0.9.12'
    compile 'io.micrometer:micrometer-registry-jmx:latest.release'
    compile 'io.micrometer:micrometer-registry-prometheus:latest.release'
    compile group: 'com.google.guava', name: 'guava', version: '23.0'
    compile group: 'commons-configuration', name: 'commons-configuration', version: '1.10'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-properties', version: '2.10.3'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.2'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
